src/css/Portfolio.css
/*Fonts styles*/
.fontTitleNormalPortfolio {
    font-family: 'Space Mono';
    font-weight: 400;
    color: white;
    font-size: 20px;
}

.fontTitleBoldPortfolio {
    font-family: 'Space Mono';
    font-weight: 700;
    color: white;
    font-size: 20px;
}

.fontTitleExtraBoldPortfolio {
    font-family: 'Space Mono';
    font-weight: 700;
    color: white;
    font-size: 20px;
}

.fontBodyNormalPortfolio {
    font-family: 'Space Mono';
    font-weight: 400;
    color: white;
    font-size: 20px;
}

.fontBodyBoldPortfolio {
    font-family: 'Space Mono';
    font-weight: 700;
    color: white;
    font-size: 20px;
}

.fontBodyExtraBoldPortfolio {
    font-family: 'Space Mono';
    font-weight: 700;
    color: white;
    font-size: 20px;
}

/*Screen styles*/
.portfolio {
    margin: 0;
    padding: 0;
    display: flex;
    flex-direction: column;
    position: relative;
    background-color: #02020D;
    overflow-x: hidden;
}

.link-title {
    cursor: default;
    color: white;
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: "center";
    padding-left: 3%;
}

.title-portfolio {
    font-size: 20px;
    padding-left: 10px;
    font-family: "Space Mono";
    font-weight: 700
}

.sectionSpan {
    padding: 15px;
    font-weight: bold;
    text-decoration: none;
    cursor: pointer;
}

.sectionSpan.default {
    color: white;
}

.sectionSpan.default:hover {
    color: #47CDD6;
}

.sectionSpan.active {
    color: #47CDD6;
}

.sectionSpanSidebar {
    cursor: pointer;
}

.sectionSpanSidebar.default {
    color: white;
}

.sectionSpanSidebar.default:hover {
    color: #47CDD6;
}

.sectionSpanSidebar.active {
    color: #47CDD6;
}

progress {
    position: fixed;
    z-index: 3;
    top: 0;
    left: 0;
    -webkit-appearance: none;
    appearance: none;
    width: 100%;
    height: 4px;
    border: none;
    background: transparent;
}

progress::-webkit-progress-bar {
    background: transparent;
}

progress::-webkit-progress-value {
    background-color: #47CDD6;
}

progress::-moz-progress-bar {
    background: #47CDD6;
}

.navbar {
    position: fixed;
    top: 0;
    left: 0;
    height: 70px;
    width: 100%;
    z-index: 2;
    backdrop-filter: blur(10px);
    -webkit-backdrop-filter: blur(10px);
    background-color: rgba(2, 2, 13, 0.5);
    display: flex;
    align-items: center;
    justify-content: space-between
}

.navbar.blurred {
    backdrop-filter: none;
    -webkit-backdrop-filter: none;
    background-color: transparent;
}

.navbar-desktop {
    display: flex;
    flex-direction: row;
    align-items: center;
    padding-right: 3%
}

.navbar-mobile {
    display: none;
}

.icon-sidebar {
    display: none;
}

.icon-sidebar-hover {
    display: none;
}

.sidebar {
    position: fixed;
    width: 30%;
    height: 100%;
    top: 2%;
    right: 0;
    background-color: rgba(26, 26, 26, 1.0);
    display: flex;
    flex-direction: column;
    z-index: 3;
    transform: translateX(100%);
    opacity: 0;
    transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out, opacity 0.3s ease-in-out;
    border-top-left-radius: 15px;
    border-bottom-left-radius: 15px;
}

.sidebar.open {
    transform: translateX(0);
    box-shadow: 0px 10px 20px rgba(71, 205, 214, 0.4), 0px 6px 5px rgba(71, 205, 214, 0.2);
    opacity: 1;
}

.title-menu {
    color: white;
    font-size: 30px;
    font-weight: bold;
    padding-left: 20px;
    font-family: "Space Mono"
}

.icon-menu-close {
    color: white;
    height: 30px;
    width: 30px;
}

.icon-menu-close-hover {
    display: flex;
    height: 45px;
    width: 45px;
    cursor: pointer;
    align-items: center;
    justify-content: center;
    margin-right: 15px;
}

.icon-menu-close-hover:hover {
    height: 45px;
    width: 45px;
    border-radius: 60px;
    background-color: rgba(71, 205, 214, 0.3)
}

.menu-section {
    padding: 15px;
    font-size: 20px;
    font-weight: bold;
    font-family: "Space Mono";
    text-decoration: none;
}

.icon-menu-section {
    height: 25px;
    width: 25px;
}

.main-content.blurred {
    filter: blur(5px);
}

.sectionSpanDim {
    margin-top: 35px;
    margin-bottom: 35px;
    padding-left: 15px;
    height: 30px;
    display: flex;
    align-items: center;
}

@media (max-width: 1400px) {
    .navbar-desktop {
        display: none;
    }

    .navbar-mobile {
        display: flex;
        overflow: hidden;
    }

    .icon-sidebar {
        color: white;
        display: flex;
        height: 30px;
        width: 30px;
    }

    .icon-sidebar-hover {
        display: flex;
        height: 45px;
        width: 45px;
        margin-right: 3%;
        right: 0;
        align-items: center;
        justify-content: center;
        cursor: pointer
    }

    .icon-sidebar-hover:hover {
        border-radius: 60px;
        background-color: rgba(71, 205, 214, 0.3)
    }
}

@media (min-width: 481px) and (max-width: 824px) {
    .fontTitleNormalPortfolio {
        font-size: 17px;
    }

    .fontTitleBoldPortfolio {
        font-size: 17px;
    }

    .fontTitleExtraBoldPortfolio {
        font-size: 17px;
    }

    .fontBodyNormalPortfolio {
        font-size: 17px;
    }

    .fontBodyBoldPortfolio {
        font-size: 17px;
    }

    .fontBodyExtraBoldPortfolio {
        font-size: 17px;
    }

    .sidebar {
        width: 60%;
    }
}

@media (min-width: 391px) and (max-width: 480px) {
    .fontTitleNormalPortfolio {
        font-size: 15px;
    }

    .fontTitleBoldPortfolio {
        font-size: 15px;
    }

    .fontTitleExtraBoldPortfolio {
        font-size: 15px;
    }

    .fontBodyNormalPortfolio {
        font-size: 15px;
    }

    .fontBodyBoldPortfolio {
        font-size: 15px;
    }

    .fontBodyExtraBoldPortfolio {
        font-size: 15px;
    }

    .title-portfolio {
        font-size: 15px;
    }

    .icon-sidebar {
        height: 25px;
        width: 25px;
    }

    .icon-sidebar-hover {
        height: 40px;
        width: 40px;
    }

    .sidebar {
        width: 70%;
    }

    .title-menu {
        font-size: 20px;
    }

    .icon-menu-close {
        height: 25px;
        width: 25px;
    }

    .icon-menu-close-hover {
        height: 40px;
        width: 40px;
    }

    .menu-section {
        font-size: 15px;
    }

    .icon-menu-section {
        height: 20px;
        width: 20px;
    }

    .sectionSpanDim {
        margin-top: 20px;
        margin-bottom: 20px;
    }
}

@media (max-width: 390px) {
    .fontTitleNormalPortfolio {
        font-size: 12px;
    }

    .fontTitleBoldPortfolio {
        font-size: 12px;
    }

    .fontTitleExtraBoldPortfolio {
        font-size: 12px;
    }

    .fontBodyNormalPortfolio {
        font-size: 12px;
    }

    .fontBodyBoldPortfolio {
        font-size: 12px;
    }

    .fontBodyExtraBoldPortfolio {
        font-size: 12px;
    }

    .title-portfolio {
        font-size: 13px;
    }

    .icon-sidebar {
        height: 25px;
        width: 25px;
    }

    .icon-sidebar-hover {
        height: 40px;
        width: 40px;
    }

    .sidebar {
        width: 70%;
    }

    .title-menu {
        font-size: 20px;
    }

    .icon-menu-close {
        height: 25px;
        width: 25px;
    }

    .icon-menu-close-hover {
        height: 40px;
        width: 40px;
    }

    .menu-section {
        font-size: 15px;
    }

    .icon-menu-section {
        height: 20px;
        width: 20px;
    }

    .sectionSpanDim {
        margin-top: 20px;
        margin-bottom: 20px;
    }
}

